fixing more layout issues

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -155,7 +155,7 @@ a:hover {
   }
 }
 
-@media (min-width: 81.25em) {
+@media (min-width: 78.125em) {
   header {
     display: flex;
     justify-content: space-between;
